2010-09-06  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Enable native exceptions by default if the
	compiler supports them.
	* configure: Regenerated.

2010-08-21  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/Shared/strings.make: Renamed most local variables to
	standardized names.  Automatically create required, but
	non-existing, {LANGUAGE}.lproj directories before running
	make_strings.  If no languages are specified, use English instead
	of printing an error messages.

	* Instance/rules.make (LANGUAGES): Set this variable here, once
	for all makefile fragments, instead of having each fragment
	contain the same duplicated code to set it.
	* Instance/gswbundle.make (LANGUAGES): Do not set it.
	* Instance/resource-set.make (LANGUAGES): Do not set it.
	* Instance/Shared/bundle.make (LANGUAGES): Do not set it.
	* Instance/Shared/strings.make (LANGUAGES): Do not set it.

	* Instance/Shared/headers.make: Added -*-makefile-*- line at the
	beginning of the file (for emacs).
	* Instance/Shared/java.make: Same change.
	* Instance/Shared/strings.make: Same change.	
	
2010-08-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* target.make (OBJ_MERGE_CMD): Use -Wl,-r instead of -r.  -Wl,-r
	is the correct way of passing the -r flag to the linker, and works
	with both GCC and clang (Suggestion from a mail by Dimitry Andric
	<dimitry@andric.com>).

2010-07-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	* target.make (EXTRACT_CLASS_NAMES_COMMAND): Allow numbers in
	class names.  Otherwise, class names containing numbers would not
	be recognized and not appear in the list of framework classes.

2010-07-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	* common.make: Set INTERNAL_OBJCFLAGS, not OBJCFLAGS, so that
	OBJCFLAGS is a free variable that can be used on the command-line,
	as in "make OBJCFLAGS=-fobjc-nonfragile-abi", to add some custom
	Objective-C flags to the compilation run without interfering with
	the standard ones.
